--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,95 @@
     color: var(--primary);
 }
 
+.contenido {
+    max-width: 900px;
+    margin: 0 auto;
+    padding: 40px;
+    opacity: 0; /* Inicialmente invisible */
+    transform: translateX(-100%); /* Comienza desde la izquierda */
+    animation: aparecerDeIzquierda 2s forwards; /* Animación para mover desde la izquierda */
+    background-image: url('../img/geofondo.jpg');
+    color: #FFFFFF; 
+    background-size: cover;
+    border-radius: 20px;
+    opacity: 0.1;
+  }
+
+  /* Animación para hacer que el contenido entre de la izquierda */
+  @keyframes aparecerDeIzquierda {
+    0% {
+      transform: translateX(-100%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
+  }
+
+  /* Estilo de listas */
+  ul {
+    text-align: left;
+    margin-top: 20px;
+    padding-left: 20px;
+  }
+
+  li {
+    margin-bottom: 10px;
+  }
+
+  
+/* desdeac */
+  
+  .gallery-container {
+    background-color: #14376d; 
+    border-radius: 16px; 
+    padding: 20px; 
+    margin: 20px auto; 
+    max-width: 1200px; 
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); 
+    min-height: 600px; 
+  }
+  
+  
+  .gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); 
+    gap: 10px; 
+    grid-auto-rows: 200px; 
+  }
+  
+  
+  .gallery img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover; 
+    border-radius: 8px; 
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); 
+  }
+  
+  .gallery img:hover {
+    
+    
+    transform: scale(1.05);
+}
+ 
+  .gallery img:nth-child(1) {
+    grid-row: span 2; 
+    grid-column: span 2; 
+  }
+  
+  .gallery img:nth-child(2) {
+    grid-row: span 3; 
+  }
+  
+  .gallery img:nth-child(3) {
+    grid-column: span 2; 
+  }
+  
+  .gallery img:nth-child(4) {
+    grid-row: span 2; 
+  }
 @media (max-width: 991.98px) {
     .navbar-light .navbar-nav .nav-link  {
         margin-right: 0;
