--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,12 @@ html {
     scroll-padding-top: 80px; /* Ajusta este valor según la altura de tu header */
     scroll-behavior: smooth; /* Agrega un desplazamiento suave */
 }
+html, body {
+    overflow-x: hidden; /* Oculta el scroll lateral */
+    max-width: 100%; /* Asegura que el contenido no sobrepase el ancho */
+}
+
+
 
 
 .fw-medium {
@@ -76,6 +82,15 @@ html {
 }
 
 /*** Navbar ***/
+.navbar {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    z-index: 1000;
+    background-color: white; /* Ajusta el color si es necesario */
+    transition: top 0.3s ease-in-out; /* Hace la animación más suave */
+}
+
 .navbar .dropdown-toggle::after {
     border: none;
     content: "\f107";
@@ -164,15 +179,18 @@ html {
 
 /* Ajustes para el carrusel */
 .header-carousel .owl-carousel-item {
-    position: relative;
+  
     height: 100vh; /* Mantiene el 100% del viewport height */
+    width: 100%;
+    position: relative;
 }
 
 .header-carousel .owl-carousel-item img {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     object-fit: cover;
+    image-rendering: crisp-edges;
 }
 
 /* Ajuste de la posición del contenido */
@@ -227,7 +245,7 @@ html {
 
 /* Mejora de la legibilidad del texto */
 .header-carousel .owl-carousel-item .position-absolute {
-    background: rgba(6, 3, 21, .6) !important; /* Fondo un poco más oscuro */
+    background: rgba(6, 3, 21, 0.22) !important; /* Fondo un poco más oscuro */
 }
 
 
@@ -241,7 +259,7 @@ html {
     background-position: center;
     border-radius: 10px;
 }
-        .slide:nth-child(1) { transform: rotateY(0deg) translateZ(400px); background-image: url('../img/agua1.webp'); }
+        .slide:nth-child(1) { transform: rotateY(0deg) translateZ(400px); background-image: url('../img/agua1.jpg'); }
         .slide:nth-child(2) { transform: rotateY(45deg) translateZ(400px); background-image: url('../img/agua2.webp'); }
         .slide:nth-child(3) { transform: rotateY(90deg) translateZ(400px); background-image: url('../img/agua3.jpg'); }
         .slide:nth-child(4) { transform: rotateY(135deg) translateZ(400px); background-image: url('../img/agua4.webp'); }
