--- a/css/style.css
+++ b/css/style.css
@@ -297,7 +297,7 @@ html, body {
     border-radius: 10px;
 }
         .slide:nth-child(1) { transform: rotateY(0deg) translateZ(400px); background-image: url('../img/agua1.jpg'); }
-        .slide:nth-child(2) { transform: rotateY(45deg) translateZ(400px); background-image: url('../img/agua2.webp'); }
+        .slide:nth-child(2) { transform: rotateY(45deg) translateZ(400px); background-image: url('../img/agua2.jpg'); }
         .slide:nth-child(3) { transform: rotateY(90deg) translateZ(400px); background-image: url('../img/agua3.jpg'); }
         .slide:nth-child(4) { transform: rotateY(135deg) translateZ(400px); background-image: url('../img/agua4.webp'); }
         .slide:nth-child(5) { transform: rotateY(180deg) translateZ(400px); background-image: url('../img/agua5.jpg'); }
