--- a/css/style.css
+++ b/css/style.css
@@ -163,9 +163,10 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 70vh;
+    height: 35vh;
     background-color: #FFFFFF;
     perspective: 1000px;
+    margin-top: 60px
 }
    .carousel {
     position: relative;
@@ -334,6 +335,34 @@ html, body {
 
 .icon:hover {
     background-color: #555; /* Cambio de color al pasar el mouse */
+}
+#mineralogia {
+    margin-top: 10vh; /* Empuja la sección debajo del carrusel */
+    padding-top: 20px; /* Añade espacio para mejorar la separación */
+}
+
+@media (max-width: 1024px) and (max-height: 600px) {
+    .header-carousel .owl-carousel-item {
+        height: 80vh !important; /* Reduce la altura del slider */
+    }
+
+    .header-carousel .owl-carousel-item img {
+        height: 80vh !important;
+        object-fit: cover !important;
+    }
+
+    .header-carousel .owl-carousel-item h1 {
+        font-size: 2rem !important; /* Reduce el tamaño del título */
+    }
+
+    .header-carousel .owl-carousel-item h5 {
+        font-size: 1rem !important;
+    }
+
+    .header-carousel .btn {
+        padding: 8px 16px; /* Reduce el tamaño de los botones */
+        font-size: 14px;
+    }
 }
 
 @media (max-width: 991.98px) {
