--- a/css/style.css
+++ b/css/style.css
@@ -153,8 +153,8 @@ html, body {
 }
 
 .header-carousel .owl-carousel-item .col-10.col-lg-8 {
-    padding: 2rem;
-    margin-bottom: 5%;
+    padding: 0rem;
+    margin-bottom: 4%;
 }
 
 .header-carousel .owl-carousel-item h5 {
@@ -779,12 +779,19 @@ h1 {
         top: -80px;
         width: 100%;
         transition: top 0.3s ease-in-out;
+        
     }
 
     body {
         padding-top: 80px;
     }
-    .header-carousel .owl-carousel-item .position-absolute {
-        padding-top: 226px !important;
-    }
+    .botonflex{ display: flex;display: flex
+        ;
+                flex-direction: row;
+                flex-wrap: nowrap;
+                align-items: flex-start;
+                margin:2px; }
+
+                
+    
 }
